--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^7.2.0",
     "@capacitor/app": "7.0.0",
     "@capacitor/core": "7.2.0",
-    "@capacitor/haptics": "7.0.0",
+    "@capacitor/haptics": "^7.0.0",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
+    "@capacitor/toast": "^7.0.1",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
     "@types/react-router": "^5.1.20",
